--- a/app/src/main/res/xml/ecommerce_tracker.xml
+++ b/app/src/main/res/xml/ecommerce_tracker.xml
@@ -2,5 +2,5 @@
 <resources>
     <integer name="ga_sessionTimeout">60</integer>
     <!--  The following value should be replaced with correct property id. -->
-    <string name="ga_trackingId">UA-60354818-2</string>
+    <string name="ga_trackingId">UA-********-2</string>
 </resources>
