--- a/app/src/main/res/xml/global_tracker.xml
+++ b/app/src/main/res/xml/global_tracker.xml
@@ -9,6 +9,6 @@
     <screenName name="com.omatt.newfadgenerator.MainActivity">Newfad Generator</screenName>
 
     <!-- The following value should be replaced with correct property id. -->
-    <string name="ga_trackingId">UA-60354818-2</string>
+    <string name="ga_trackingId">UA-********-2</string>
 
 </resources>
