--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -31,21 +31,57 @@
         android:textSize="@dimen/txt_size_btn_newfad_generate"/>
 
     <TextView
-        android:id="@+id/btn_newfad_tweet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/btn_newfad_generate"
-        android:layout_below="@+id/btn_newfad_generate"
-        android:layout_marginTop="@dimen/btn_margin"
-        android:text="@string/btn_txt_newfad_tweet"
-        android:textSize="@dimen/txt_size_btn_newfad_generate"/>
-
-    <TextView
         android:id="@+id/btn_about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="@string/btn_txt_about"/>
+
+    <LinearLayout
+        android:id="@+id/layout_share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btn_share"
+        android:layout_alignLeft="@+id/btn_share"
+        android:orientation="vertical"
+        android:visibility="invisible">
+
+        <ImageButton
+            android:id="@+id/btn_share_fb"
+            android:layout_width="@dimen/btn_floating_action_dimen"
+            android:layout_height="@dimen/btn_floating_action_dimen"
+            android:layout_marginBottom="@dimen/btn_share_margin"
+            android:background="@drawable/ic_btn_share_fb"/>
+
+        <ImageButton
+            android:id="@+id/btn_share_twitter"
+            android:layout_width="@dimen/btn_floating_action_dimen"
+            android:layout_height="@dimen/btn_floating_action_dimen"
+            android:layout_marginBottom="@dimen/btn_share_margin"
+            android:background="@drawable/ic_btn_share_twitter"/>
+
+        <ImageButton
+            android:id="@+id/btn_share_sms"
+            android:layout_width="@dimen/btn_floating_action_dimen"
+            android:layout_height="@dimen/btn_floating_action_dimen"
+            android:layout_marginBottom="@dimen/btn_share_margin"
+            android:background="@drawable/ic_btn_share_sms"/>
+
+        <ImageButton
+            android:id="@+id/btn_share_email"
+            android:layout_width="@dimen/btn_floating_action_dimen"
+            android:layout_height="@dimen/btn_floating_action_dimen"
+            android:layout_marginBottom="@dimen/btn_share_margin"
+            android:background="@drawable/ic_btn_share_email"/>
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/btn_share"
+        android:layout_width="@dimen/btn_floating_action_dimen"
+        android:layout_height="@dimen/btn_floating_action_dimen"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/ic_btn_share"/>
 
 </RelativeLayout>
